--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.3.50'
     ext.kotlin_version = '1.3.21'
     repositories {
         google()
@@ -25,4 +26,35 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    // For android sub-projects
+    minSdkVersion = 19
+    targetSdkVersion = 23
+    compileSdkVersion = 28
+    buildToolsVersion = '28.0.3'
+
+    javaVersion = JavaVersion.VERSION_1_7
+
+    GROUP = 'com.tencent.matrix'
+    VERSION_NAME = "${VERSION_NAME_PREFIX}${VERSION_NAME_SUFFIX}"
+
+    POM_PACKAGING = "pom"
+    POM_DESCRIPTION = "matrix"
+
+    POM_URL = "https://github.com/Tencent/Matrix"
+    POM_SCM_URL = "https://github.com/Tencent/Matrix.git"
+    POM_SCM_COMMIT = ""
+    POM_ISSUE_URL = 'https://github.com/Tencent/Matrix/issues'
+
+    POM_LICENCE_NAME = "BSD License"
+    POM_LICENCE_URL = "https://opensource.org/licenses/BSD-3-Clause"
+    POM_LICENCE_DIST = "repo"
+
+    POM_DEVELOPER_ID = "Tencent Wechat"
+    POM_DEVELOPER_NAME = "Tencent Wechat, Inc."
+
+    BINTRAY_LICENCE = ['BSD 3-Clause']
+    BINTRAY_ORGANIZATION = "matrix"
 }
