--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     defaultConfig {
         applicationId "com.example.myapplication"
         minSdkVersion 15
-        targetSdkVersion 28
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -19,6 +19,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
     }
 
 
@@ -39,5 +43,6 @@ dependencies {
     api 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     api 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation files('lib/performance.jar')
-    implementation files('lib/matrix-apk-canary-0.6.0.jar')
+    implementation 'com.inuker.bluetooth:library:1.4.0'
+//    implementation files('lib/matrix-apk-canary-0.6.0.jar')
 }
