--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,10 +32,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-                android:name=".MainActivity"
-                android:label="@string/app_name"
-                android:theme="@style/AppTheme.NoActionBar"></activity>
+<!--        <activity-->
+<!--                android:name=".MainActivity"-->
+<!--                android:label="@string/app_name"-->
+<!--                android:theme="@style/AppTheme.NoActionBar"></activity>-->
 
 
 
